--- a/.project.json
+++ b/.project.json
@@ -6,7 +6,7 @@
   "build": {
     "targetFolder": "dist",
     "sourceFolder": "webapp",
-    "buildRequired": false,
+    "buildRequired": true,
     "lastBuildDateTime": "Thu, 18 Feb 2016 12:49:57 GMT"
   },
   "generation": [
